# Tequel

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  WHITE_PAPER.md  tequel.h
benches/: tequel_bench.rs
docs/Core/: Encryption.md  Hashing.md  RNG.md
src/: avx2_inline.rs  lib.rs  tequel_c_test.c
src/encrypt/: mod.rs
src/error/: mod.rs
src/hash/: mod.rs
src/rng/: mod.rs
src/tools/: mod.rs
tests/: integration_test.rs
