[package]
name = "tequel-rs"
version = "0.4.5"
edition = "2024"
authors = ["Gabriel 'dotxav' Xavier <dotxavket@gmail.com>"]
description = "An authenticated simetric encrypt engine (AEAD), robust and caotic."
license = "MIT"
repository = "https://github.com/G4brielXavier/tequel-rs"
readme = "README.md"
keywords = ["cryptography", "encryption", "mac", "learning"]
categories = ["cryptography"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = "0.2"
zeroize = { version = "1.7", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
rayon = "1.8"


[[bench]]
name = "tequel_bench"
harness = false